<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingHorizontal="@dimen/standard_dimens"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="@dimen/very_large_size_for_image"
        android:layout_height="@dimen/very_large_size_for_image"
        android:layout_marginTop="@dimen/large_dimens"
        android:contentDescription="@string/todo"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_dimens"
        android:text="@string/hello_title"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_image" />

    <TextView
        android:id="@+id/tv_sing_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_dimens"
        android:text="@string/sing_in"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/it_username"
        style="@style/StyleForTextInputLayout"
        android:hint="@string/username"
        app:endIconMode="clear_text"
        app:endIconTint="@color/red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sing_to">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_password"
        style="@style/StyleForTextInputLayout"
        android:hint="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/it_username"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_forgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_dimens"
        android:gravity="end"
        android:paddingEnd="@dimen/large_dimens"
        android:text="@string/forgot_password"
        android:textAllCaps="true"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_password"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_dimens"
        android:backgroundTint="@color/black"
        android:text="@string/go"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_dimens"
        android:layout_marginBottom="@dimen/large_size_for_image"
        android:gravity="center"
        android:text="@string/new_user"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:layout_editor_absoluteX="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>